    COMPIZ_CONFIG_PROFILE in unity

  [ Alberts Muktupāvels ]
  * Ensure that surfaces used by metacity theme have device scale set to
    1 . (LP: #1530277) (LP: #1530277)
  * Use AnyPropertyType when getting _MOTIF_WM_HINTS property. (LP:
    #1702297)

  [ Martin Wimpress ]
  * mate: Avoid artefacts of Windows Thumbnail Previews (LP: #1606369)

 -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Tue, 27 Jun 2017 18:49:59 +0200

compiz (1:0.9.12.2+16.04.20160823-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * [expo] limit scroll to workarea. (LP: #913880)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 23 Aug 2016 16:06:02 +0000

compiz (1:0.9.12.2+16.04.20160801.3-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * Don't activate expo if not needed (1x1 setup) (LP: #1606254)
  * Don't crash if gsettings key is not found. Default value will be
    used. (LP: #1044662)
  * focusDefaultWindow: focus Most Recently Used (MRU) window and
    fallback to the top window in case MRU list is not available. (LP:
    #1073488, LP: #1459671)

  [ Marco Trevisan (Treviño) ]
  * Unity MigrationScript: sync gsettings on exit, and only use dconf on
    failure (LP: #1605011)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Mon, 01 Aug 2016 13:41:42 +0000

compiz (1:0.9.12.2+16.04.20160714-0ubuntu1) xenial; urgency=medium

  [ Eleni Maria Stea ]
  * Added options for no animation in expo and scale plugins. They skip
    the intermediate fading steps that force several redraws.
  * Added a new option in show desktop plugin that skips the fade
    animation: useful when performance is more important than eyecandy.

  [ Marco Trevisan (Treviño) ]
  * debian: add unity-lowgfx profile to compizconfig (LP: #1598770)
  * Composite: use C++ goodness for managing damaging rectangles
  * ccsGSettingsBackend: don't try to update setting if wrapper is not
    found
  * migration scripts: remove unsupported plugins for all the unity
    profiles
