@@ -52,3 +52,4 @@ s0_skip_animation = true
 [move]
 s0_mode = 1
 s0_blend = false
+s0_lazy_positioning = true
