@@ -34,9 +34,6 @@
 
 COMPIZ_PLUGIN_20090315 (move, MovePluginVTable)
 
-static float pos_x, pos_y;
-static bool paint_rectangle;
-
 static bool
 moveInitiate (CompAction         *action,
 	      CompAction::State  state,
@@ -49,13 +46,9 @@ moveInitiate (CompAction         *action,
     if (ms->optionGetMode () != MoveOptions::ModeNormal)
     {
 	ms->gScreen->glPaintOutputSetEnabled (ms, true);
-	paint_rectangle = true;
-	pos_x = pos_y = 0;
-    }
-    else
-    {
-	ms->gScreen->glPaintOutputSetEnabled (ms, false);
-	paint_rectangle = false;
+	ms->paintRect = true;
+	ms->rectX = 0;
+	ms->rectY = 0;
     }
 
     Window xid = CompOption::getIntOptionNamed (options, "window");
@@ -188,26 +181,15 @@ moveTerminate (CompAction         *action,
 {
     MOVE_SCREEN (screen);
 
-    if (ms->optionGetMode () != MoveOptions::ModeNormal)
-    {
-	ms->gScreen->glPaintOutputSetEnabled (ms, true);
-	paint_rectangle = true;
-    }
-    else
-    {
-	ms->gScreen->glPaintOutputSetEnabled (ms, false);
-	paint_rectangle = false;
-    }
-
     if (ms->w)
     {
 	MOVE_WINDOW (ms->w);
 
-	if (ms->optionGetMode () != MoveOptions::ModeNormal) {
+	if (ms->paintRect)
+	{
+	    ms->paintRect = false;
 	    ms->gScreen->glPaintOutputSetEnabled (ms, false);
-	    paint_rectangle = false;
-
-	    mw->window->move (pos_x, pos_y, true);
+	    mw->window->move (ms->rectX, ms->rectY, true);
 	}
 
 	if (state & CompAction::StateCancel)
@@ -564,8 +546,8 @@ moveHandleMotionEvent (CompScreen *s,
 	    }
 	    else
 	    {
-		pos_x += wX + dx - w->geometry ().x ();
-		pos_y += wY + dy - w->geometry ().y ();
+		ms->rectX += wX + dx - w->geometry ().x ();
+		ms->rectY += wY + dy - w->geometry ().y ();
 	    }
 
 	    ms->x -= dx;
@@ -577,10 +559,6 @@ moveHandleMotionEvent (CompScreen *s,
 void
 MoveScreen::handleEvent (XEvent *event)
 {
-    Box box;
-    if (getMovingRectangle (&box))
-	damageMovingRectangle (&box);
-
     switch (event->type)
     {
 	case ButtonPress:
@@ -757,6 +735,9 @@ MoveScreen::MoveScreen (CompScreen *screen) :
     status (RectangleOut),
     releaseButton (0),
     grab (NULL),
+    paintRect(false),
+    rectX(0),
+    rectY(0),
     hasCompositing (false),
     yConstrained (false)
 {
@@ -784,16 +765,7 @@ MoveScreen::MoveScreen (CompScreen *screen) :
     ScreenInterface::setHandler (screen);
     GLScreenInterface::setHandler (gScreen);
 
-    if (optionGetMode () != MoveOptions::ModeNormal)
-    {
-	paint_rectangle = true;
-	gScreen->glPaintOutputSetEnabled (this, true);
-    }
-    else
-    {
-	paint_rectangle = false;
-	gScreen->glPaintOutputSetEnabled (this, false);
-    }
+    gScreen->glPaintOutputSetEnabled (this, false);
 }
 
 MoveScreen::~MoveScreen ()
@@ -805,12 +777,7 @@ MoveScreen::~MoveScreen ()
 bool
 MoveScreen::getMovingRectangle (BoxPtr pBox)
 {
-    if (optionGetMode () == MoveOptions::ModeNormal)
-	return false;
-
     MOVE_SCREEN (screen);
-    if (!ms)
-	return false;
 
     CompWindow *w = ms->w;
     if (!w)
@@ -821,8 +788,8 @@ MoveScreen::getMovingRectangle (BoxPtr pBox)
     int wWidth  = w->geometry ().widthIncBorders () + w->border ().left + w->border ().right;
     int wHeight = w->geometry ().heightIncBorders () + w->border ().top + w->border ().bottom;
 
-    pBox->x1 = wX + pos_x;
-    pBox->y1 = wY + pos_y;
+    pBox->x1 = wX + ms->rectX;
+    pBox->y1 = wY + ms->rectY;
 
     pBox->x2 = pBox->x1 + wWidth;
     pBox->y2 = pBox->y1 + wHeight;
@@ -838,28 +805,18 @@ bool MoveScreen::glPaintOutput (const GLScreenPaintAttrib &attrib,
 {
     bool status = gScreen->glPaintOutput (attrib, transform, region, output, mask);
 
-    if (status && paint_rectangle)
+    if (status && paintRect)
     {
 	unsigned short *borderColor = optionGetBorderColor ();
-	unsigned short *fillColor = optionGetFillColor ();
+	unsigned short *fillColor = NULL;
 
-	return glPaintMovingRectangle (transform, output, borderColor, (optionGetMode() == MoveOptions::ModeRectangle) ? fillColor : NULL);
+	if (optionGetMode() == MoveOptions::ModeRectangle)
+	    fillColor = optionGetFillColor ();
+
+	return glPaintMovingRectangle (transform, output, borderColor, fillColor);
     }
+
     return status;
-}
-
-void
-MoveScreen::damageMovingRectangle (BoxPtr pBox)
-{
-    int x1, x2, y1, y2;
-
-    x1 = pBox->x1 - 1;
-    y1 = pBox->y1 - 1;
-    x2 = pBox->x2 + 1;
-    y2 = pBox->y2 + 1;
-
-    if (cScreen)
-	cScreen->damageRegion (CompRect (x1, y1, x2 - x1, y2 - y1));
 }
 
 bool
@@ -872,6 +829,8 @@ MoveScreen::glPaintMovingRectangle (const GLMatrix &transform,
     if (!getMovingRectangle(&box))
 	return false;
 
+    const unsigned short MaxUShort = std::numeric_limits <unsigned short>::max ();
+    const float MaxUShortFloat = MaxUShort;
     GLVertexBuffer *streamingBuffer = GLVertexBuffer::streamingBuffer ();
     GLMatrix sTransform (transform);
 
@@ -881,6 +840,13 @@ MoveScreen::glPaintMovingRectangle (const GLMatrix &transform,
     GLint origSrc, origDst;
 
     bool blend = optionGetBlend ();
+
+    if (blend && borderColor[3] == MaxUShort)
+    {
+	if (optionGetMode () == MoveOptions::ModeOutline || fillColor[3] == MaxUShort)
+	    blend = false;
+    }
+
     if (blend)
     {
 #ifdef USE_GLES
@@ -895,12 +861,10 @@ MoveScreen::glPaintMovingRectangle (const GLMatrix &transform,
 #endif
     }
 
-    bc[3] = (float) borderColor[3] / (float) 65535.0f;
-    bc[0] = ((float) borderColor[0] / 65535.0f) * bc[3];
-    bc[1] = ((float) borderColor[1] / 65535.0f) * bc[3];
-    bc[2] = ((float) borderColor[2] / 65535.0f) * bc[3];
-    if (!blend)
-	bc[3] = 1;
+    bc[3] = blend ? ((float) borderColor[3] / MaxUShortFloat) : MaxUShortFloat;
+    bc[0] = ((float) borderColor[0] / MaxUShortFloat) * bc[3];
+    bc[1] = ((float) borderColor[1] / MaxUShortFloat) * bc[3];
+    bc[2] = ((float) borderColor[2] / MaxUShortFloat) * bc[3];
 
     vertexData[0] = box.x1;
     vertexData[1] = box.y1;
@@ -951,12 +915,10 @@ MoveScreen::glPaintMovingRectangle (const GLMatrix &transform,
     /* fill rectangle */
     if (fillColor)
     {
-	fc[3] = fillColor[3];
-	fc[0] = fillColor[0] * (unsigned long) fc[3] / 65535;
-	fc[1] = fillColor[1] * (unsigned long) fc[3] / 65535;
-	fc[2] = fillColor[2] * (unsigned long) fc[3] / 65535;
-	if (!blend)
-	    fc[3] = 1;
+	fc[3] = blend ? fillColor[3] : 0.85f * MaxUShortFloat;
+	fc[0] = fillColor[0] * (unsigned long) fc[3] / MaxUShortFloat;
+	fc[1] = fillColor[1] * (unsigned long) fc[3] / MaxUShortFloat;
+	fc[2] = fillColor[2] * (unsigned long) fc[3] / MaxUShortFloat;
 
 	streamingBuffer->begin (GL_TRIANGLE_STRIP);
 	streamingBuffer->addColors (1, fc);
@@ -977,18 +939,52 @@ MoveScreen::glPaintMovingRectangle (const GLMatrix &transform,
 
     if (blend)
     {
-	glEnable (GL_BLEND);
-	glBlendFunc (GL_ONE, GL_ONE_MINUS_SRC_ALPHA);
+	glDisable (GL_BLEND);
+#ifdef USE_GLES
+	glBlendFuncSeparate (origSrc, origDst,
+			     origSrcAlpha, origDstAlpha);
+#else
+	glBlendFunc (origSrc, origDst);
+#endif
     }
 
-    CompositeScreen *cScreen = CompositeScreen::get (screen);
     if (cScreen)
     {
-	CompRect damage (box.x1 - borderWidth,
-			 box.y1 - borderWidth,
-			 box.x2 - box.x1 + 2,
-			 box.y2 - box.y1 + 2);
-	cScreen->damageRegion (damage);
+    	CompRegion damageRegion;
+
+    	if (optionGetMode () == MoveOptions::ModeOutline)
+        {
+	    // Top
+	    damageRegion += CompRect (box.x1 - borderWidth,
+				      box.y1 - borderWidth,
+				      box.x2 - box.x1 + borderWidth * 2,
+				      borderWidth + 1);
+	    // Right
+	    damageRegion += CompRect (box.x2 - borderWidth,
+				      box.y1 - borderWidth,
+				      borderWidth + 1,
+				      box.y2 - box.y1 + borderWidth * 2);
+	    // Bottom
+	    damageRegion += CompRect (box.x1 - borderWidth,
+				      box.y2 - borderWidth,
+				      box.x2 - box.x1 + borderWidth * 2,
+				      borderWidth + 1);
+	    // Left
+	    damageRegion += CompRect (box.x1 - borderWidth,
+				      box.y1 - borderWidth,
+				      borderWidth + 1,
+				      box.y2 - box.y1 + borderWidth * 2);
+        }
+        else
+    	{
+	    CompRect damage (box.x1 - borderWidth,
+			     box.y1 - borderWidth,
+			     box.x2 - box.x1 + borderWidth * 2,
+			     box.y2 - box.y1 + borderWidth * 2);
+	    damageRegion += damage;
+	}
+
+	cScreen->damageRegion (damageRegion);
     }
 
     return true;
